# tenacious-conversion-engine

./: .env.example  .gitignore  .pre-commit-config.yaml  ACT_IV_GAPS_AND_REMEDIATION.md  README.md  ablation_results.json  baseline.md  evidence_graph.json  held_out_traces.jsonl  interim_report.md  method.md  pyproject.toml  render.yaml
act5/: __init__.py  autoresponder.py  autoresponder_heuristics.json  citations.json  claims.py  evidence_graph.json  metrics_outbound.py  metrics_threads.py  outbound_events.py  pdf.py
agent/: main.py  requirements.txt
app/: main.py
artifacts/: sample_competitor_gap_brief_generated.json  sample_hiring_signal_brief_generated.json  sms_email_booking_link_examples.md
data/: crunchbase_odm_sample.json
docs/: calcom-self-hosted-setup.md  e2e_verification_and_code_improvements.md  email_sms_channel_status.md  outbound_e2e_checklist.md
eval/: cost_ledger.py  run_auto_opt_baseline.py  run_baseline.py  run_coordination_method.py  score_log.json  tau2_prompt_entry.py  trace_log.jsonl
probes/: failure_taxonomy.md  probe_library.md  probe_results.json  target_failure_mode.md
scripts/: __init__.py  build_invoice_rollup.py  check_commit_msg.py  check_commit_scope.py  generate_act5.py  generate_submission_artifacts.py  run_conversation_golden_path.py  run_golden_path.py  run_outbound_variant_eval.py  run_probes.py  run_rubric_golden_path.py  setup_hubspot_properties.py  validate_evidence_graph.py
tests/: test_africastalking_sms.py  test_ai_maturity_collectors.py  test_booking_crm_writeback.py  test_bookings_route.py  test_calcom.py  (+19 more)
(+103 files in other folders)
