[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conversion-engine"
version = "0.1.0"
description = "FastAPI backend for the Tenacious conversion engine challenge"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic-settings>=2.4,<3.0",
  "pydantic[email]>=2.0",
  "httpx>=0.27,<1.0",
  "python-multipart>=0.0.9",
  "langfuse>=2.0",
  "openai>=1.0",
  "resend>=2.0",
  "africastalking>=1.0",
  "playwright>=1.40",
  "mcp>=1.0",
  "psycopg[binary]>=3.3.3",
  "psycopg-pool>=3.3.0",
]

[dependency-groups]
dev = [
  "pre-commit>=4.6.0",
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.6,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agent", "app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
